# bank-recon-agent

./: .env.example  .gitignore  Makefile  README.md  docker-compose.yml
services/agent/: Dockerfile  pyproject.toml
services/agent/agent/: __init__.py  config.py  db.py  metrics.py  runner.py  traces.py
services/agent/agent/invariants/: __init__.py  base.py  step_invariants.py
services/agent/agent/schemas/: __init__.py  models.py
services/agent/agent/steps/: __init__.py  enrich.py  ingest.py  match.py  post.py  validate.py
services/agent/agent/tools/: __init__.py  llm_match.py
services/agent/api/: main.py  models.py
services/agent/evals/: harness.py
services/agent/evals/golden_dataset/: amount_off_by_cent.json  amount_off_by_dollar.json  amount_with_comma.json  amount_with_dollar_sign.json  batch_10_transactions.json  clean_exact_match.json  clean_multi_match.json  date_before_invoice.json  date_format_dd_mon_yyyy.json  date_format_mm_dd_yyyy.json  date_out_of_window.json  date_within_window.json  duplicate_invoice_prevention.json  duplicate_row_in_csv.json  fuzzy_vendor_abbreviation.json  fuzzy_vendor_case_insensitive.json  fuzzy_vendor_llc_stripped.json  fuzzy_vendor_typo.json  generate.py  idempotent_rerun.json  low_confidence_escalation.json  malformed_csv_wrong_columns.json  malformed_row_invalid_date.json  malformed_row_missing_field.json  malformed_row_zero_amount.json  negative_amount_refund.json  no_match_all_invoices_matched.json  no_match_unknown_vendor.json  (+4 more)
services/agent/scripts/: seed.py
services/agent/tests/: conftest.py
(+22 files in other folders)
