[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "bank-recon-agent"
version = "0.1.0"
requires-python = ">=3.11"
dependencies = [
  "fastapi==0.115.5",
  "uvicorn[standard]==0.32.1",
  "pydantic==2.10.3",
  "pydantic-settings==2.7.0",
  "anthropic==0.40.0",
  "pandas==2.2.3",
  "rapidfuzz==3.10.1",
  "supabase==2.10.0",
  "structlog==24.4.0",
  "prometheus-client==0.21.1",
  "python-multipart==0.0.19",
  "tenacity==9.0.0",
  "python-dotenv==1.0.1",
  "httpx>=0.27,<1",
]

[project.optional-dependencies]
dev = [
  "pytest==8.3.4",
  "pytest-asyncio==0.24.0",
  "pytest-cov==6.0.0",
  "pytest-httpx>=0.30",
  "ruff==0.8.4",
  "mypy==1.13.0",
  "types-python-dateutil",
  "faker==33.1.0",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["agent*", "api*", "evals*"]

[tool.ruff]
target-version = "py311"
line-length = 100
[tool.ruff.lint]
select = ["E", "F", "I", "N", "UP", "B", "SIM"]
ignore = ["E501"]

[tool.mypy]
python_version = "3.11"
strict = true
ignore_missing_imports = true

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
addopts = "--cov=agent --cov=api --cov-report=term-missing --cov-fail-under=75"
